FinalVersion/MultiNodeAnalizer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADDINFOCOMM_CLOSE
    ADDINFOCOMM_OPEN
    RISK_ADDINFO_CLOSE
    RISK_ADDINFO_OPEN
    SECUOBJ_ADDINFO_CLOSE
    SECUOBJ_ADDINFO_OPEN
    SECUOBJ_OBJSP_OPEN
    SECURITY_OBJECTIVE_CLOSE

Grammar

Rule 0     S' -> doc_model
Rule 1     doc_model -> XML_VERSION doc_model
Rule 2     doc_model -> doc_comment doc_model
Rule 3     doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
Rule 4     office_model -> OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE
Rule 5     model_nodes -> MODEL_NODES_OPEN model_node model_nodes
Rule 6     model_nodes -> model_node model_nodes
Rule 7     model_nodes -> MODEL_NODES_CLOSE
Rule 8     model_node -> MODEL_NODE_OPEN model_node
Rule 9     model_node -> basic_info model_node
Rule 10    model_node -> threats model_node
Rule 11    model_node -> structure_security_policies model_node
Rule 12    model_node -> structure_security_relationships model_node
Rule 13    model_node -> vulnerabilities model_node
Rule 14    model_node -> node_risks model_node
Rule 15    model_node -> security_controls model_node
Rule 16    model_node -> node_security_objective model_node
Rule 17    model_node -> MODEL_NODE_CLOSE
Rule 18    node_security_objective -> NODE_SECUOBJ_OPEN node_security_objective
Rule 19    node_security_objective -> security_objective_obj node_security_objective
Rule 20    node_security_objective -> NODE_SECUOBJ_CLOSE
Rule 21    security_objective_obj -> SECUOBJ_OBJ_OPEN security_objective_obj
Rule 22    security_objective_obj -> security_objective_name security_objective_obj
Rule 23    security_objective_obj -> security_objective_description security_objective_obj
Rule 24    security_objective_obj -> security_objective_objective_type security_objective_obj
Rule 25    security_objective_obj -> security_objective_security_service security_objective_obj
Rule 26    security_objective_obj -> security_objective_temporality security_objective_obj
Rule 27    security_objective_obj -> security_objective_source security_objective_obj
Rule 28    security_objective_obj -> SECUOBJ_OBJ_CLOSE
Rule 29    security_objective_name -> SECUOBJ_NAME_OPEN STRING SECUOBJ_NAME_CLOSE
Rule 30    security_objective_description -> SECUOBJ_DESCRIP_OPEN STRING SECUOBJ_DESCRIP_CLOSE
Rule 31    security_objective_objective_type -> SECUOBJ_OBJTYPE_OPEN STRING SECUOBJ_OBJTYPE_CLOSE
Rule 32    security_objective_security_service -> SECUOBJ_SECUSERV_OPEN STRING SECUOBJ_SECUSERV_CLOSE
Rule 33    security_objective_temporality -> SECUOBJ_TEMP_OPEN STRING SECUOBJ_TEMP_CLOSE
Rule 34    security_objective_source -> SECUOBJ_OBJSOUR_OPEN STRING SECUOBJ_OBJSOUR_CLOSE
Rule 35    node_risks -> NODE_RISKS_OPEN node_risks
Rule 36    node_risks -> risks_risk node_risks
Rule 37    node_risks -> NODE_RISKS_CLOSE
Rule 38    risks_risk -> RISKS_RISK_OPEN risks_risk
Rule 39    risks_risk -> risk_name risks_risk
Rule 40    risks_risk -> risk_objective risks_risk
Rule 41    risks_risk -> risk_vulnerability risks_risk
Rule 42    risks_risk -> risk_threat risks_risk
Rule 43    risks_risk -> risk_description risks_risk
Rule 44    risks_risk -> risk_likelihood risks_risk
Rule 45    risks_risk -> risk_impact risks_risk
Rule 46    risks_risk -> risk_temporality risks_risk
Rule 47    risks_risk -> RISKS_RISK_CLOSE
Rule 48    risk_name -> RISK_NAME_OPEN risk_name
Rule 49    risk_name -> STRING risk_name
Rule 50    risk_name -> RISK_NAME_CLOSE
Rule 51    risk_objective -> RISK_OBJ_OPEN STRING RISK_OBJ_CLOSE
Rule 52    risk_vulnerability -> RISK_VUL_OPEN STRING RISK_VUL_CLOSE
Rule 53    risk_threat -> RISK_THREAT_OPEN STRING RISK_THREAT_CLOSE
Rule 54    risk_description -> RISK_DESCRIPTION_OPEN STRING RISK_DESCRIPTION_CLOSE
Rule 55    risk_likelihood -> RISK_LIKHD_OPEN STRING RISK_LIKHD_CLOSE
Rule 56    risk_impact -> RISK_IMPACT_OPEN STRING RISK_IMPACT_CLOSE
Rule 57    risk_temporality -> RISK_TEMP_OPEN STRING RISK_TEMP_CLOSE
Rule 58    basic_info -> BASIC_INFORMATION_OPEN basic_info
Rule 59    basic_info -> component_name basic_info
Rule 60    basic_info -> component_overview basic_info
Rule 61    basic_info -> intrinsical_properties basic_info
Rule 62    basic_info -> BASIC_INFORMATION_CLOSE
Rule 63    component_name -> COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
Rule 64    intrinsical_properties -> INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
Rule 65    intrinsical_properties -> properties_color intrinsical_properties
Rule 66    intrinsical_properties -> properties_material intrinsical_properties
Rule 67    intrinsical_properties -> properties_height intrinsical_properties
Rule 68    intrinsical_properties -> properties_weight intrinsical_properties
Rule 69    intrinsical_properties -> properties_count intrinsical_properties
Rule 70    intrinsical_properties -> properties_fragility intrinsical_properties
Rule 71    intrinsical_properties -> properties_property intrinsical_properties
Rule 72    intrinsical_properties -> INTRINSICAL_PROPERTIES_CLOSE
Rule 73    component_overview -> COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
Rule 74    properties_color -> PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
Rule 75    properties_material -> PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
Rule 76    properties_height -> PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
Rule 77    properties_weight -> PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
Rule 78    properties_count -> PROPERTIES_COUNT_OPEN str PROPERTIES_COUNT_CLOSE
Rule 79    properties_fragility -> PROPERTIES_FRAGILITY_OPEN str PROPERTIES_FRAGILITY_CLOSE
Rule 80    properties_property -> PROPERTIES_PROPERTY_OPEN str PROPERTIES_PROPERTY_CLOSE
Rule 81    threats -> THREATS_OPEN threats
Rule 82    threats -> threat threats
Rule 83    threats -> THREATS_CLOSE
Rule 84    threat -> THREAT_OPEN threat
Rule 85    threat -> threat_name threat
Rule 86    threat -> threat_description threat
Rule 87    threat -> threat_vulnerabilities threat
Rule 88    threat -> THREAT_CLOSE
Rule 89    threat_name -> THREAT_NAME_OPEN str THREAT_NAME_CLOSE
Rule 90    threat_description -> THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
Rule 91    threat_vulnerabilities -> THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
Rule 92    threat_vulnerabilities -> threat_vulnerability threat_vulnerabilities
Rule 93    threat_vulnerabilities -> THREAT_VULNERABILITIES_CLOSE
Rule 94    threat_vulnerability -> VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE
Rule 95    structure_security_policies -> security_policies
Rule 96    security_policies -> SECURITY_POLICIES_OPEN security_policies
Rule 97    security_policies -> security_policy security_policies
Rule 98    security_policies -> SECURITY_POLICIES_CLOSE
Rule 99    security_policy -> SECURITY_POLICY_OPEN ID GENERAL_CLOSE POLICY_NAME_OPEN STRING POLICY_NAME_CLOSE POLICY_DESCRIPTION_OPEN STRING POLICY_DESCRIPTION_CLOSE security_objectives_SP SECURITY_POLICY_CLOSE
Rule 100   security_objectives_SP -> SP_OBJECTIVES_OPEN SECURITY_OBJECTIVE_OPEN STRING SECUOBJ_OBJ_CLOSE SP_OBJECTIVES_CLOSE
Rule 101   additional_info_SP -> SP_ADDITIONAL_INFORMATION_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SP_ADDITIONAL_INFORMATION_CLOSE
Rule 102   structure_security_relationships -> security-relationships
Rule 103   security-relationships -> SECURITY_RELATIONSHIP_OPEN security-relationships
Rule 104   security-relationships -> linked-node security-relationships
Rule 105   security-relationships -> SECURITY_RELATIONSHIP_CLOSE
Rule 106   linked-node -> linked_node_open linked-node
Rule 107   linked-node -> relationship-type linked-node
Rule 108   linked-node -> LINKED_NODE_CLOSE
Rule 109   linked_node_open -> LINKED_NODE_OPEN ID GENERAL_CLOSE
Rule 110   relationship-type -> RELATIONSHIP_TYPE_OPEN ID GENERAL_CLOSE relationship-type
Rule 111   relationship-type -> security-objectives_SR relationship-type
Rule 112   relationship-type -> security-objectives_SR RELATIONSHIP_TYPE_CLOSE
Rule 113   security-objectives_SR -> SECURITY_OBJECTIVES_OPEN security-objectives_SR
Rule 114   security-objectives_SR -> security-objective_SR security-objectives_SR
Rule 115   security-objectives_SR -> security-objective_SR SECURITY_OBJECTIVES_CLOSE
Rule 116   security-objective_SR -> SECURITY_OBJECTIVE_OPEN SELF_OBJECTIVE_OPEN SELF_OBJECTIVE_CLOSE PEER_OBJECTIVE_OPEN PEER_OBJECTIVE_CLOSE SECUOBJ_OBJ_CLOSE
Rule 117   vulnerabilities -> VULNERABILITIES_OPEN vulnerabilities
Rule 118   vulnerabilities -> vulnerability vulnerabilities
Rule 119   vulnerabilities -> VULNERABILITIES_CLOSE
Rule 120   vulnerability -> VULNERABILITY_OPEN vulnerability
Rule 121   vulnerability -> vulnerability_name vulnerability
Rule 122   vulnerability -> vulnerability_refSecurity vulnerability
Rule 123   vulnerability -> vulnerability_overview vulnerability
Rule 124   vulnerability -> vulnerability_description vulnerability
Rule 125   vulnerability -> vulnerability_impact vulnerability
Rule 126   vulnerability -> vulnerability_severity vulnerability
Rule 127   vulnerability -> vulnerability_additionalInfo vulnerability
Rule 128   vulnerability -> VULNERABILITY_CLOSE
Rule 129   vulnerability_refSecurity -> VULN_REFERENCE_OPEN vulnerability_refSecurity
Rule 130   vulnerability_refSecurity -> refSecurity vulnerability_refSecurity
Rule 131   vulnerability_refSecurity -> VULN_REFERENCE_CLOSE
Rule 132   vulnerability_additionalInfo -> VULN_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE VULN_ADDITIONAL_INFO_CLOSE
Rule 133   vulnerability_name -> VULN_NAME_OPEN str VULN_NAME_CLOSE
Rule 134   refSecurity -> REF_SECURITY_OPEN str REF_SECURITY_CLOSE
Rule 135   vulnerability_overview -> VULN_OVERVIEW_OPEN str VULN_OVERVIEW_CLOSE
Rule 136   vulnerability_description -> VULN_DESCRIPTION_OPEN str VULN_DESCRIPTION_CLOSE
Rule 137   vulnerability_impact -> VULN_IMPACT_OPEN str VULN_IMPACT_CLOSE
Rule 138   vulnerability_severity -> VULN_SEVERITY_OPEN str VULN_SEVERITY_CLOSE
Rule 139   security_controls -> SECURITY_CONTROLS_OPEN security_controls
Rule 140   security_controls -> security_control security_controls
Rule 141   security_controls -> SECURITY_CONTROLS_CLOSE
Rule 142   security_control -> SECURITY_CONTROL_OPEN security_control
Rule 143   security_control -> security_control_name security_control
Rule 144   security_control -> security_control_description security_control
Rule 145   security_control -> sec_policies security_control
Rule 146   security_control -> securityControl_additionalInfo security_control
Rule 147   security_control -> SECURITY_CONTROL_CLOSE
Rule 148   sec_policies -> SECCONT_SECURITY_POLICIES_OPEN sec_policies
Rule 149   sec_policies -> security_policyID sec_policies
Rule 150   sec_policies -> SECCONT_SECURITY_POLICIES_CLOSE
Rule 151   securityControl_additionalInfo -> SECCONT_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SECCONT_ADDITIONAL_INFO_CLOSE
Rule 152   security_control_name -> SECCONT_NAME_OPEN str SECCONT_NAME_CLOSE
Rule 153   security_control_description -> SECCONT_DESCRIPTION_OPEN str SECCONT_DESCRIPTION_CLOSE
Rule 154   security_policyID -> SECPOLICY_ID_OPEN str SECPOLICY_ID_CLOSE
Rule 155   doc_comment -> COMMENT_OPEN doc_comment
Rule 156   doc_comment -> str doc_comment
Rule 157   doc_comment -> GENERAL_CLOSE
Rule 158   str -> STRING str
Rule 159   str -> STRING

Terminals, with rules where they appear

ADDINFOCOMM_CLOSE    : 
ADDINFOCOMM_OPEN     : 
ADDITIONAL_INFO_CLOSE : 101 132 151
ADDITIONAL_INFO_OPEN : 101 132 151
BASIC_INFORMATION_CLOSE : 62
BASIC_INFORMATION_OPEN : 58
COMMENT_OPEN         : 155
COMPONENT_NAME_CLOSE : 63
COMPONENT_NAME_OPEN  : 63
COMPONENT_OVERVIEW_CLOSE : 73
COMPONENT_OVERVIEW_OPEN : 73
GENERAL_CLOSE        : 99 109 110 157
ID                   : 99 109 110
INTRINSICAL_PROPERTIES_CLOSE : 72
INTRINSICAL_PROPERTIES_OPEN : 64
LINKED_NODE_CLOSE    : 108
LINKED_NODE_OPEN     : 109
MODEL_NODES_CLOSE    : 7
MODEL_NODES_OPEN     : 5
MODEL_NODE_CLOSE     : 17
MODEL_NODE_OPEN      : 8
NODE_RISKS_CLOSE     : 37
NODE_RISKS_OPEN      : 35
NODE_SECUOBJ_CLOSE   : 20
NODE_SECUOBJ_OPEN    : 18
OFFICE_DOCUMENT_CLOSE : 3
OFFICE_DOCUMENT_OPEN : 3
OFFICE_MODEL_CLOSE   : 4
OFFICE_MODEL_OPEN    : 4
PEER_OBJECTIVE_CLOSE : 116
PEER_OBJECTIVE_OPEN  : 116
POLICY_DESCRIPTION_CLOSE : 99
POLICY_DESCRIPTION_OPEN : 99
POLICY_NAME_CLOSE    : 99
POLICY_NAME_OPEN     : 99
PROPERTIES_COLOR_CLOSE : 74
PROPERTIES_COLOR_OPEN : 74
PROPERTIES_COUNT_CLOSE : 78
PROPERTIES_COUNT_OPEN : 78
PROPERTIES_FRAGILITY_CLOSE : 79
PROPERTIES_FRAGILITY_OPEN : 79
PROPERTIES_HEIGHT_CLOSE : 76
PROPERTIES_HEIGHT_OPEN : 76
PROPERTIES_MATERIAL_CLOSE : 75
PROPERTIES_MATERIAL_OPEN : 75
PROPERTIES_PROPERTY_CLOSE : 80
PROPERTIES_PROPERTY_OPEN : 80
PROPERTIES_WEIGHT_CLOSE : 77
PROPERTIES_WEIGHT_OPEN : 77
REF_SECURITY_CLOSE   : 134
REF_SECURITY_OPEN    : 134
RELATIONSHIP_TYPE_CLOSE : 112
RELATIONSHIP_TYPE_OPEN : 110
RISKS_RISK_CLOSE     : 47
RISKS_RISK_OPEN      : 38
RISK_ADDINFO_CLOSE   : 
RISK_ADDINFO_OPEN    : 
RISK_DESCRIPTION_CLOSE : 54
RISK_DESCRIPTION_OPEN : 54
RISK_IMPACT_CLOSE    : 56
RISK_IMPACT_OPEN     : 56
RISK_LIKHD_CLOSE     : 55
RISK_LIKHD_OPEN      : 55
RISK_NAME_CLOSE      : 50
RISK_NAME_OPEN       : 48
RISK_OBJ_CLOSE       : 51
RISK_OBJ_OPEN        : 51
RISK_TEMP_CLOSE      : 57
RISK_TEMP_OPEN       : 57
RISK_THREAT_CLOSE    : 53
RISK_THREAT_OPEN     : 53
RISK_VUL_CLOSE       : 52
RISK_VUL_OPEN        : 52
SECCONT_ADDITIONAL_INFO_CLOSE : 151
SECCONT_ADDITIONAL_INFO_OPEN : 151
SECCONT_DESCRIPTION_CLOSE : 153
SECCONT_DESCRIPTION_OPEN : 153
SECCONT_NAME_CLOSE   : 152
SECCONT_NAME_OPEN    : 152
SECCONT_SECURITY_POLICIES_CLOSE : 150
SECCONT_SECURITY_POLICIES_OPEN : 148
SECPOLICY_ID_CLOSE   : 154
SECPOLICY_ID_OPEN    : 154
SECUOBJ_ADDINFO_CLOSE : 
SECUOBJ_ADDINFO_OPEN : 
SECUOBJ_DESCRIP_CLOSE : 30
SECUOBJ_DESCRIP_OPEN : 30
SECUOBJ_NAME_CLOSE   : 29
SECUOBJ_NAME_OPEN    : 29
SECUOBJ_OBJSOUR_CLOSE : 34
SECUOBJ_OBJSOUR_OPEN : 34
SECUOBJ_OBJSP_OPEN   : 
SECUOBJ_OBJTYPE_CLOSE : 31
SECUOBJ_OBJTYPE_OPEN : 31
SECUOBJ_OBJ_CLOSE    : 28 100 116
SECUOBJ_OBJ_OPEN     : 21
SECUOBJ_SECUSERV_CLOSE : 32
SECUOBJ_SECUSERV_OPEN : 32
SECUOBJ_TEMP_CLOSE   : 33
SECUOBJ_TEMP_OPEN    : 33
SECURITY_CONTROLS_CLOSE : 141
SECURITY_CONTROLS_OPEN : 139
SECURITY_CONTROL_CLOSE : 147
SECURITY_CONTROL_OPEN : 142
SECURITY_OBJECTIVES_CLOSE : 115
SECURITY_OBJECTIVES_OPEN : 113
SECURITY_OBJECTIVE_CLOSE : 
SECURITY_OBJECTIVE_OPEN : 100 116
SECURITY_POLICIES_CLOSE : 98
SECURITY_POLICIES_OPEN : 96
SECURITY_POLICY_CLOSE : 99
SECURITY_POLICY_OPEN : 99
SECURITY_RELATIONSHIP_CLOSE : 105
SECURITY_RELATIONSHIP_OPEN : 103
SELF_OBJECTIVE_CLOSE : 116
SELF_OBJECTIVE_OPEN  : 116
SP_ADDITIONAL_INFORMATION_CLOSE : 101
SP_ADDITIONAL_INFORMATION_OPEN : 101
SP_OBJECTIVES_CLOSE  : 100
SP_OBJECTIVES_OPEN   : 100
STRING               : 29 30 31 32 33 34 49 51 52 53 54 55 56 57 99 99 100 158 159
THREATS_CLOSE        : 83
THREATS_OPEN         : 81
THREAT_CLOSE         : 88
THREAT_DESCRIPTION_CLOSE : 90
THREAT_DESCRIPTION_OPEN : 90
THREAT_NAME_CLOSE    : 89
THREAT_NAME_OPEN     : 89
THREAT_OPEN          : 84
THREAT_VULNERABILITIES_CLOSE : 93
THREAT_VULNERABILITIES_OPEN : 91
VULNERABILITIES_CLOSE : 119
VULNERABILITIES_OPEN : 117
VULNERABILITIES_VULNERABILITY_CLOSE : 94
VULNERABILITIES_VULNERABILITY_OPEN : 94
VULNERABILITY_CLOSE  : 128
VULNERABILITY_OPEN   : 120
VULN_ADDITIONAL_INFO_CLOSE : 132
VULN_ADDITIONAL_INFO_OPEN : 132
VULN_DESCRIPTION_CLOSE : 136
VULN_DESCRIPTION_OPEN : 136
VULN_IMPACT_CLOSE    : 137
VULN_IMPACT_OPEN     : 137
VULN_NAME_CLOSE      : 133
VULN_NAME_OPEN       : 133
VULN_OVERVIEW_CLOSE  : 135
VULN_OVERVIEW_OPEN   : 135
VULN_REFERENCE_CLOSE : 131
VULN_REFERENCE_OPEN  : 129
VULN_SEVERITY_CLOSE  : 138
VULN_SEVERITY_OPEN   : 138
XML_VERSION          : 1
error                : 

Nonterminals, with rules where they appear

additional_info_SP   : 
basic_info           : 9 58 59 60 61
component_name       : 59
component_overview   : 60
doc_comment          : 2 155 156
doc_model            : 1 2 0
intrinsical_properties : 61 64 65 66 67 68 69 70 71
linked-node          : 104 106 107
linked_node_open     : 106
model_node           : 5 6 8 9 10 11 12 13 14 15 16
model_nodes          : 4 5 6
node_risks           : 14 35 36
node_security_objective : 16 18 19
office_model         : 3
properties_color     : 65
properties_count     : 69
properties_fragility : 70
properties_height    : 67
properties_material  : 66
properties_property  : 71
properties_weight    : 68
refSecurity          : 130
relationship-type    : 107 110 111
risk_description     : 43
risk_impact          : 45
risk_likelihood      : 44
risk_name            : 39 48 49
risk_objective       : 40
risk_temporality     : 46
risk_threat          : 42
risk_vulnerability   : 41
risks_risk           : 36 38 39 40 41 42 43 44 45 46
sec_policies         : 145 148 149
security-objective_SR : 114 115
security-objectives_SR : 111 112 113 114
security-relationships : 102 103 104
securityControl_additionalInfo : 146
security_control     : 140 142 143 144 145 146
security_control_description : 144
security_control_name : 143
security_controls    : 15 139 140
security_objective_description : 23
security_objective_name : 22
security_objective_obj : 19 21 22 23 24 25 26 27
security_objective_objective_type : 24
security_objective_security_service : 25
security_objective_source : 27
security_objective_temporality : 26
security_objectives_SP : 99
security_policies    : 95 96 97
security_policy      : 97
security_policyID    : 149
str                  : 63 73 74 75 76 77 78 79 80 89 90 94 133 134 135 136 137 138 152 153 154 156 158
structure_security_policies : 11
structure_security_relationships : 12
threat               : 82 84 85 86 87
threat_description   : 86
threat_name          : 85
threat_vulnerabilities : 87 91 92
threat_vulnerability : 92
threats              : 10 81 82
vulnerabilities      : 13 117 118
vulnerability        : 118 120 121 122 123 124 125 126 127
vulnerability_additionalInfo : 127
vulnerability_description : 124
vulnerability_impact : 125
vulnerability_name   : 121
vulnerability_overview : 123
vulnerability_refSecurity : 122 129 130
vulnerability_severity : 126

Parsing method: LALR

state 0

    (0) S' -> . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (155) doc_comment -> . COMMENT_OPEN doc_comment
    (156) doc_comment -> . str doc_comment
    (157) doc_comment -> . GENERAL_CLOSE
    (158) str -> . STRING str
    (159) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_model                      shift and go to state 1
    doc_comment                    shift and go to state 3
    str                            shift and go to state 6

state 1

    (0) S' -> doc_model .



state 2

    (1) doc_model -> XML_VERSION . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (155) doc_comment -> . COMMENT_OPEN doc_comment
    (156) doc_comment -> . str doc_comment
    (157) doc_comment -> . GENERAL_CLOSE
    (158) str -> . STRING str
    (159) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_model                      shift and go to state 9
    doc_comment                    shift and go to state 3
    str                            shift and go to state 6

state 3

    (2) doc_model -> doc_comment . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (155) doc_comment -> . COMMENT_OPEN doc_comment
    (156) doc_comment -> . str doc_comment
    (157) doc_comment -> . GENERAL_CLOSE
    (158) str -> . STRING str
    (159) str -> . STRING

    XML_VERSION     shift and go to state 2
    OFFICE_DOCUMENT_OPEN shift and go to state 4
    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_comment                    shift and go to state 3
    doc_model                      shift and go to state 10
    str                            shift and go to state 6

state 4

    (3) doc_model -> OFFICE_DOCUMENT_OPEN . office_model OFFICE_DOCUMENT_CLOSE
    (4) office_model -> . OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE

    OFFICE_MODEL_OPEN shift and go to state 12

    office_model                   shift and go to state 11

state 5

    (155) doc_comment -> COMMENT_OPEN . doc_comment
    (155) doc_comment -> . COMMENT_OPEN doc_comment
    (156) doc_comment -> . str doc_comment
    (157) doc_comment -> . GENERAL_CLOSE
    (158) str -> . STRING str
    (159) str -> . STRING

    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    doc_comment                    shift and go to state 13
    str                            shift and go to state 6

state 6

    (156) doc_comment -> str . doc_comment
    (155) doc_comment -> . COMMENT_OPEN doc_comment
    (156) doc_comment -> . str doc_comment
    (157) doc_comment -> . GENERAL_CLOSE
    (158) str -> . STRING str
    (159) str -> . STRING

    COMMENT_OPEN    shift and go to state 5
    GENERAL_CLOSE   shift and go to state 7
    STRING          shift and go to state 8

    str                            shift and go to state 6
    doc_comment                    shift and go to state 14

state 7

    (157) doc_comment -> GENERAL_CLOSE .

    XML_VERSION     reduce using rule 157 (doc_comment -> GENERAL_CLOSE .)
    OFFICE_DOCUMENT_OPEN reduce using rule 157 (doc_comment -> GENERAL_CLOSE .)
    COMMENT_OPEN    reduce using rule 157 (doc_comment -> GENERAL_CLOSE .)
    GENERAL_CLOSE   reduce using rule 157 (doc_comment -> GENERAL_CLOSE .)
    STRING          reduce using rule 157 (doc_comment -> GENERAL_CLOSE .)


state 8

    (158) str -> STRING . str
    (159) str -> STRING .
    (158) str -> . STRING str
    (159) str -> . STRING

  ! shift/reduce conflict for STRING resolved as shift
    COMMENT_OPEN    reduce using rule 159 (str -> STRING .)
    GENERAL_CLOSE   reduce using rule 159 (str -> STRING .)
    COMPONENT_NAME_CLOSE reduce using rule 159 (str -> STRING .)
    COMPONENT_OVERVIEW_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_COLOR_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_MATERIAL_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_HEIGHT_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_WEIGHT_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_COUNT_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_FRAGILITY_CLOSE reduce using rule 159 (str -> STRING .)
    PROPERTIES_PROPERTY_CLOSE reduce using rule 159 (str -> STRING .)
    THREAT_NAME_CLOSE reduce using rule 159 (str -> STRING .)
    THREAT_DESCRIPTION_CLOSE reduce using rule 159 (str -> STRING .)
    VULN_NAME_CLOSE reduce using rule 159 (str -> STRING .)
    VULN_OVERVIEW_CLOSE reduce using rule 159 (str -> STRING .)
    VULN_DESCRIPTION_CLOSE reduce using rule 159 (str -> STRING .)
    VULN_IMPACT_CLOSE reduce using rule 159 (str -> STRING .)
    VULN_SEVERITY_CLOSE reduce using rule 159 (str -> STRING .)
    SECCONT_NAME_CLOSE reduce using rule 159 (str -> STRING .)
    SECCONT_DESCRIPTION_CLOSE reduce using rule 159 (str -> STRING .)
    VULNERABILITIES_VULNERABILITY_CLOSE reduce using rule 159 (str -> STRING .)
    REF_SECURITY_CLOSE reduce using rule 159 (str -> STRING .)
    SECPOLICY_ID_CLOSE reduce using rule 159 (str -> STRING .)
    STRING          shift and go to state 8

  ! STRING          [ reduce using rule 159 (str -> STRING .) ]

    str                            shift and go to state 15

state 9

    (1) doc_model -> XML_VERSION doc_model .

    $end            reduce using rule 1 (doc_model -> XML_VERSION doc_model .)


state 10

    (2) doc_model -> doc_comment doc_model .

    $end            reduce using rule 2 (doc_model -> doc_comment doc_model .)


state 11

    (3) doc_model -> OFFICE_DOCUMENT_OPEN office_model . OFFICE_DOCUMENT_CLOSE

    OFFICE_DOCUMENT_CLOSE shift and go to state 16


state 12
